// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders correctly 1`] = `
<div
  class="mcore-search-bar mcore-search-bar--round"
>
  <form
    action="#"
    class="mcore-search-bar__form"
  >
    <div
      class="mcore-search-bar__content"
    >
      <i
        class="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
        theme="default"
        type="search"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#search"
          />
        </svg>
      </i>
      <div
        class="mcore-search-bar__mock"
      >
        <div
          class="mcore-input mcore-search-bar__input mcore-input--clearable"
        >
          <input
            autocomplete="off"
            placeholder="搜索"
            type="search"
            value=""
          />
          <i
            class="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
            theme="default"
            type="wrong-round-fill"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#wrong-round-fill"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="mcore-search-bar__cancel"
    >
      取消
    </div>
  </form>
</div>
`;

exports[`SearchBar renders defaultValue correctly 1`] = `
<ForwardRef(forwardRef)
  cancelText="取消取消"
  defaultValue="搜索关键字"
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    cancelText="取消取消"
    defaultValue="搜索关键字"
    forwardedRef={null}
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      cancelText="取消取消"
      clearable={true}
      defaultValue="搜索关键字"
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      placeholder="搜索"
      prefixCls="mcore-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--round"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onCancel called correctly 1`] = `
<ForwardRef(forwardRef)
  onCancel={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onCancel={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onCancel={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="mcore-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--round"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onChange called correctly 1`] = `
<ForwardRef(forwardRef)
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "测试值",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "测试值",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "测试值",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="mcore-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--round mcore-search-bar--focus"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value="测试值"
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--focus mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value="测试值"
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onClear called correctly 1`] = `
<ForwardRef(forwardRef)
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <LocaleReceiver
    forwardedRef={null}
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onClear={
        [MockFunction] {
          "calls": Array [
            Array [
              "",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      prefixCls="mcore-search-bar"
      shape="radius"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--radius"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onFocus called correctly 1`] = `
<ForwardRef(forwardRef)
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onFocus={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="mcore-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--round mcore-search-bar--focus"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onSubmit called correctly 1`] = `
<ForwardRef(forwardRef)
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          "My new value",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            "My new value",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onSubmit={
        [MockFunction] {
          "calls": Array [
            Array [
              "My new value",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="mcore-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="mcore-search-bar mcore-search-bar--round mcore-search-bar--focus"
      >
        <form
          action="#"
          className="mcore-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="mcore-search-bar__content"
          >
            <Icon
              className="mcore-search-bar__icon"
              prefixCls="mcore-icon"
              size="md"
              theme="default"
              type="search"
              viewBox="0 0 32 32"
            >
              <Iconfont
                className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                size="md"
                theme="default"
                type="search"
              >
                <Icon
                  className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                  prefixCls="mcore-icon"
                  size="md"
                  theme="default"
                  type="search"
                  viewBox="0 0 32 32"
                >
                  <i
                    className="mcore-icon mcore-search-bar__icon mcore-icon--search mcore-icon--default mcore-icon--md"
                    size="md"
                    theme="default"
                    type="search"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                    >
                      <use
                        xlinkHref="#search"
                      />
                    </svg>
                  </i>
                </Icon>
              </Iconfont>
            </Icon>
            <div
              className="mcore-search-bar__mock"
            >
              <InputBase
                className="mcore-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="mcore-input"
                readOnly={false}
                type="search"
                value="My new value"
              >
                <div
                  className="mcore-input mcore-search-bar__input mcore-input--focus mcore-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value="My new value"
                  />
                  <Icon
                    className="mcore-input__clear"
                    onClick={[Function]}
                    prefixCls="mcore-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                        onClick={[Function]}
                        prefixCls="mcore-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="mcore-icon mcore-input__clear mcore-icon--wrong-round-fill mcore-icon--default mcore-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="mcore-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;
